add resample lab, modifty devcontainer to install requirements

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -74,4 +74,6 @@
   "postAttachCommand": {
     "rstudio-start": "rserver"
   }
+    ,
+    "postCreateCommand": "pip install -r /workspaces/ISL_ch5_resampling_python_lab/.devcontainer/requirements.txt"
 }
