--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,10 @@
 // Config options: https://github.com/rocker-org/devcontainer-templates/tree/main/src/r-ver
 {
   "name": "Data Science Devcontainer with R (rocker/r-ver base) and Python",
-  "image": "ghcr.io/rocker-org/devcontainer/r-ver:4.5",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "."
+  },
   // Add DS software
   "features": {
     // Quarto configuration: https://github.com/rocker-org/devcontainer-features/blob/main/src/quarto-cli/README.md
@@ -74,6 +77,4 @@
   "postAttachCommand": {
     "rstudio-start": "rserver"
   }
-    ,
-    "postCreateCommand": "pip install -r /workspaces/ISL_ch5_resampling_python_lab/.devcontainer/requirements.txt"
 }
