--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -75,6 +75,7 @@
     }
   },
   "postAttachCommand": {
-    "rstudio-start": "rserver"
+    "rstudio-start": "rserver",
+    "jupyterlab-start": "jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --ServerApp.allow_origin='*' --ServerApp.allow_remote_access=true --ServerApp.open_browser=false --ServerApp.token='' --ServerApp.password='' --ServerApp.allow_root=true"
   }
 }
